--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
         </div>
         <div class="panel buttons">
             <template v-if="running">
-                <button class="btn attack">Attack</button>
-                <button class="btn special-attack">Special Atack</button>
-                <button class="btn heal">Heal</button>
+                <button class="btn attack" @click="attack(false)">Attack</button>
+                <button class="btn special-attack"  @click="attack(true)">Special Atack</button>
+                <button class="btn heal" @click="healAndHurt">Heal</button>
                 <button class="btn give-up" @click="giveUp">Give up</button>
             </template>
             <button v-else @click="startGame" class="btn new">New Game</button>
         </div>
-        <div class="panel">Div 4</div>
+        <div v-if= "logs.length" class="panel logs">
+            <ul>
+                <li v-for="log in logs" :class="log.style" class="log">
+                    {{log.text}}
+                </li>
+            </ul>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
